# langchain-agent-book

./: .gitignore  chapter9.ipynb  notebook.ipynb  pyproject.toml
document_agent/: main.py
document_agent/agent/: model.py  workflow.py
document_agent/agent/generator/: information_evaluagtor.py  interview_conductor.py  persona_generator.py  requirements_document_generator.py
