[project]
name = "langchain-agent-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "langchain-anthropic>=0.3.16",
    "langchain-chroma>=0.2.4",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-openai>=0.3.25",
    "langchain-tavily>=0.2.5",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.1",
    "langgraph-checkpoint>=2.1.0",
    "nest-asyncio>=1.6.0",
    "pip>=25.1.1",
    "pygraphviz",
    "python-dotenv>=1.1.1",
    "ragas>=0.2.15",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=4.1.0",
    "tavily-python>=0.7.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
